--- a/kontinuierlich.qmd
+++ b/kontinuierlich.qmd
@@ -1,3 +1,304 @@
 ---
 title: Kontinuierliche Zufallsvariablen
 ---
+
+Kontinuierliche Zufallsvariablen können im Gegensatz zu diskreten Zufallsvariablen jeden Wert in einem echten Intervall annehmen. Daher ist der Bereich einer kontinuierlichen Zufallsvariablen unendlich und nicht abzählbar. Diese Vielzahl von Werten macht es unmöglich, die Wahrscheinlichkeit für jeden einzelnen zu berechnen, wodurch es nicht möglich ist, ein Wahrscheinlichkeitsmodell über eine 
+Wahrscheinlichkeitsfunktion wie bei diskreten Zufallsvariablen zu definieren.
+
+Darüber hinaus wird die Messung einer kontinuierlichen Zufallsvariablen in der Regel durch die Genauigkeit des Messinstruments begrenzt. 
+Zum Beispiel beträgt die wahre Größe einer Person, für die unser Messinstrument 1,68 Meter groß sagt, nicht genau 1,68 Meter, da die Genauigkeit des Messinstruments nur auf zwei Dezimalstellen cm (Zentimeter) beträgt. Dies bedeutet, dass die wahre Größe dieser Person zwischen 1,675 und 
+1,685 Metern liegt.
+
+Daher ist es für kontinuierliche Variablen unsinnig, die Wahrscheinlichkeit eines einzelnen Werts zu berechnen, und wir werden Wahrscheinlichkeiten für Intervalle berechnen.
+
+## Verteilungsfunktion einer kontinuierlichen Zufallsvariablen
+
+Um die Verteilungsfunktion einer kontinuierlichen Zufallsvariablen zu modellieren, wird eine Wahrscheinlichkeitsdichtefunktion verwendet.
+
+::: {.callout-warning appearance="default"}
+## Definition "Wahrscheinlichkeitsdichtefunktion"
+Die Wahrscheinlichkeitsdichtefunktion einer kontinuierlichen Zufallsvariablen $X$ ist 
+eine Funktion $f(x)$, die folgende Bedingungen erfüllt:
+
+- Sie ist nicht-negativ: $f(x)\geq 0$ $\forall x\in \mathbb{R}$.
+- Der von der Kurve der Dichtefunktion und der x-Achse begrenzte Bereich beträgt gleich 1, d.h.:
+$$
+\int_{-\infty}^{\infty} f(x)\; dx = 1.
+$$
+
+- Die Wahrscheinlichkeit, dass $X$ einen Wert zwischen $a$ und $b$ annimmt, entspricht dem von der Dichtefunktion begrenzten Bereich unter $a$ und $b$, d.h.:
+
+$$
+P(a\leq X\leq b) = \int_a^b f(x)\; dx
+$$
+:::
+
+Die Wahrscheinlichkeitsdichtefunktion misst die relative Wahrscheinlichkeit jedes Werts, jedoch ist $f(x)$ nicht die Wahrscheinlichkeit von $x$, da $P(X=x) = 0$ für jeden Wert $x$ gilt.
+
+### Verteilungsfunktion
+
+Genauso wie bei diskreten Zufallsvariablen macht es auch bei kontinuierlichen Zufallsvariablen Sinn, kumulative Wahrscheinlichkeiten zu berechnen.
+
+::: {.callout-warning appearance="default"}
+## Definition "Verteilungsfunktion"
+Die Verteilungsfunktion einer kontinuierlichen Zufallsvariablen $X$ ist eine Funktion $F(x)$, die jeden 
+Wert $a$ auf die Wahrscheinlichkeit abbildet, dass $X$ einen Wert kleiner oder gleich $a$ annimmt, d.h.:
+
+$$
+F(a) = P(X\leq a) = \int_{-\infty}^{a} f(x)\; dx.
+$$
+:::
+
+### Wahrscheinlichkeitsbereiche
+
+```{r}
+#| label: dichtearea1
+x<-seq(0,30,length=100) 
+y2<-dchisq(x,df=10) 
+par(mar=c(3.5,3.5,2,1), 
+    mgp=c(2.2,0.6,0))
+plot(x, y2, 
+     xlim=c(0, 30), 
+     ylim=c(0, 0.11), 
+     type="n", 
+     xlab="X", 
+     ylab=expression("Wahrscheinlichkeitsdichte " * f(x)), 
+     yaxs="i", 
+     axes=FALSE) 
+axis(side=1, at=c(x[20],x[60]), labels=c("a","b"))
+polygon(c(x[20], x[20:60],x[60]), 
+        c(0, y2[20:60],0), 
+        col="salmon", 
+        lty=0) 
+lines(x, y2, type="l", col="steelblue", lwd=2)
+text(12, 0.02, expression(integral(a, b, f(x) * dx)))
+
+```
+
+$$
+\displaystyle P(a\leq X\leq b) = \int_a^b f(x)\, dx = F(b)-F(a)
+$$
+
+::: {.callout-tip appearance="default"}
+## Beispiel
+Gegeben ist die folgende Funktion:
+
+$$
+f(x) = 
+\left\{
+\begin{array}{ll}
+0 & \text{bei } x < 0 \\
+e^{-x} & \text{bei } x \geq 0
+\end{array}
+\right.
+$$
+Überprüfen wir, ob es sich um eine Dichtefunktion handelt.
+
+Da diese Funktion klarerweise nicht-negativ ist, müssen wir prüfen, dass der Gesamtbereich, der durch die Kurve und die x-Achse begrenzt wird, gleich 1 beträgt:
+
+$$
+\begin{aligned}
+\int_{-\infty}^\infty f(x)\;dx &= \int_{-\infty}^0 f(x)\;dx +\int_0^\infty f(x)\;dx = \int_{-\infty}^0 0\;dx +\int_0^\infty e^{-x}\;dx =\\
+&= \left[-e^{-x}\right]_0^{\infty} = -e^{-\infty}+e^0 = 1.
+\end{aligned}
+$$
+
+Nun berechnen wir die Wahrscheinlichkeit, dass $X$ einen Wert zwischen 0 und 2 annimmt:
+
+$$
+\begin{aligned}
+P(0\leq X\leq 2) &= \int_0^2 f(x)\;dx = \int_0^2 e^{-x}\;dx = \left[-e^{-x}\right]_0^2 = -e^{-2}+e^0 = 0.8646.
+\end{aligned}
+$$
+
+:::
+
+
+
+### Populationsstatistik
+
+Die Berechnung der Populationsstatistik erfolgt ähnlich wie im Fall diskreter Variabler, jedoch mit der Dichtefunktion anstelle der Wahrscheinlichkeitsfunktion und durch Ersetzen der diskreten Summe durch das Integral.
+
+Die wichtigsten sind:
+
+- Mittelwert: $\mu = E(X) = \int_{-\infty}^\infty x f(x)\; dx$
+- Varianz: $\sigma^2 = Var(X) = \int_{-\infty}^\infty x^2f(x)\; dx -\mu^2$
+- Standardabweichung: $\sigma = +\sqrt{\sigma^2}$
+
+::: {.callout-tip appearance="default"}
+## Beispiel
+
+Gegeben ist die Variable $X$ mit der folgenden Wahrscheinlichkeitsdichtefunktion:
+
+$$
+f(x) = 
+\left\{
+\begin{array}{ll}
+0 & \text{bei } x < 0 \\
+e^{-x} & \text{bei } x \geq 0
+\end{array}
+\right.
+$$
+
+
+Der Mittelwert beträgt:
+
+$$
+\begin{aligned}
+\mu &= \int_{-\infty}^\infty xf(x)\;dx = \int_{-\infty}^0 xf(x)\;dx +\int_0^\infty xf(x)\;dx = \int_{-\infty}^0 0\;dx +\int_0^\infty xe^{-x}\;dx =\\
+&= \left[-e^{-x}(1+x)\right]_0^{\infty} = 1.
+\end{aligned}
+$$
+
+Die Varianz beträgt:
+
+$$
+\begin{aligned}
+\sigma^2 &= \int_{-\infty}^\infty x^2f(x)\;dx -\mu^2 = \int_{-\infty}^0 x^2f(x)\;dx +\int_0^\infty x^2f(x)\;dx -\mu^2 = \\
+&= \int_{-\infty}^0 0\;dx +\int_0^\infty x^2e^{-x}\;dx -\mu^2= \left[-e^{-x}(x^2+2x+2)\right]_0^{\infty} - 1^2= 2e^0-1 = 1.
+\end{aligned}
+$$
+:::
+
+
+Die wichtigsten kontinuierlichen Wahrscheinlichkeitsverteilungsmodelle sind:
+
+- Gleichverteilung
+- Normalverteilung
+- Student's t-Verteilung
+- Chi-Quadrat-Verteilung
+
+
+
+
+
+## stetige Gleichverteilung
+
+
+Wenn alle Werte einer Zufallsvariablen $X$ dieselbe Wahrscheinlichkeit haben, dann ist die Wahrscheinlichkeitsverteilung von $X$ gleichverteilt.
+
+::: {.callout-warning appearance="default"}
+## Definition "Kontinuierliche gleichverteilte Verteilung" $U(a,b)$)
+
+Eine kontinuierliche Zufallsvariable $X$ folgt dem Wahrscheinlichkeitsverteilungsmodell der Gleichverteilung mit den Parametern $a$ und $b$, notiert als $X\sim U(a,b)$, wenn ihr Bereich $\mbox{Ran}(X) = [a,b]$ ist und ihre Dichtefunktion
+
+$$
+f(x)= \frac{1}{b-a}\quad \forall x\in [a,b]
+$$
+
+
+ist. 
+:::
+
+Dabei sind $a$ und $b$ der minimale bzw. maximale Wert des Bereichs, und die Dichtefunktion ist konstant.
+
+Der Erwartungswert und die Varianz sind:
+
+$$
+\mu = \frac{a+b}{2}\qquad \sigma^2=\frac{(b-a)^2}{12}.
+$$
+
+::: {.callout-tip appearance="default"}
+## Beispiel
+Die Generierung einer Zufallszahl zwischen 0 und 1 folgt der kontinuierlichen gleichverteilten Verteilung $U(0, 1)$. 
+
+:::{layout-ncol=2}
+
+
+```{r}
+#| label: kontinuniform
+par(mar=c(3.5,3.5,3,1), 
+    mgp=c(2.2,0.6,0), 
+    las=1)
+x <- seq(0, 1, length=10)
+y <- dunif(x, min=0, max=1)
+plot(x, y, 
+     type="l", 
+     xlab="X", 
+     xlim=c(-0.1,1.1), 
+     ylim=c(0,1.2), 
+     ylab=expression("Wahrscheinlichkeitsdichte " * f(x)), 
+     main="Stetige Gleichverteilung U(0,1)", 
+     yaxs="i", 
+     col="steelblue", 
+     lwd=2,
+     cex.lab = 1.5)
+segments(0,0,0,1, lty=2, col="gray")
+segments(1,0,1,1, lty=2, col="gray")
+
+```
+
+
+
+```{r}
+#| label: lineargrowth
+par(mar=c(3.5, 3.5, 3, 1), 
+    mgp=c(2.2, 0.6, 0), las=1)
+x <- seq(0, 1, length=10)
+y <- punif(x, min=0, max=1)
+plot(c(-0.2,x,1.2), c(0,y,1), 
+     type="l", 
+     xlab="X", 
+     xlim=c(-0.1,1.1), 
+     ylim=c(0,1.2), 
+     ylab=expression("kumulierte Wahrscheinlichkeit " * F(x)), 
+     main="Stetige Gleichverteilung U(0,1)", 
+     yaxs="i", 
+     col="steelblue", 
+     lwd=2,
+     cex.lab = 1.5)
+```
+
+:::
+
+Da die Dichtefunktion konstant ist, wächst die Verteilungsfunktion linear.
+:::
+
+
+
+
+::: {.callout-tip appearance="default"}
+## Beispiel: Wartezeit für einen Bus
+
+Ein Bus hat eine Frequenz von 15 Minuten. Angenommen, eine Person kann zu jeder Zeit an der Bushaltestelle ankommen. Wie groß ist die Wahrscheinlichkeit, dass man auf den Bus zwischen 5 und 10 Minuten wartet? 
+
+In diesem Fall folgt die Variable $X$, welche die Wartezeit misst, einer kontinuierlichen gleichverteilten Verteilung $U(0, 15)$, da jede Wartezeit zwischen $0$ und $15$ gleich wahrscheinlich ist. 
+
+Die Wahrscheinlichkeit, zwischen $5$ und $10$ Minuten auf den Bus zu warten, beträgt:
+
+$$
+\begin{aligned}
+P(5\leq X\leq 10) &= \int_{5}^{10} \frac{1}{15}\;dx = \left[\frac{x}{15}\right]_5^{10} = \\
+&= \frac{10}{15}-\frac{5}{15} =\frac{1}{3}.
+\end{aligned}
+$$
+
+```{r}
+#| label: buswartezeit
+par(mar=c(3.5,3.5,3,1), 
+    mgp=c(2.2,0.6,0), 
+    las=1)
+x <- seq(0, 15, by=5)
+y <- dunif(x, min=0, max=15)
+plot(x, y, 
+     type="n", 
+     ylim=c(0, 0.08), 
+     xlab="X", 
+     ylab=expression("Wahrscheinlichkeitsdichte " * f(x)), 
+     main="stetige Gleichverteilung U(0,15)", 
+     yaxs="i")
+polygon(c(x[2], x[2], x[3], x[3]), 
+        c(0, y[1], y[2], 0), 
+        col="coral", 
+        lty=0)
+lines(x, y, col="steelblue", lwd=2)
+text(7.5, 0.04, "P(5 < X < 10) =")
+text(7.5, 0.03, expression(integral(frac(1,15) * dx, 5, 10)))
+
+
+
+
+```
+
+Die erwarete (durchschnittliche) Wartezeit ist $\mu=\frac{0+15}{2}=7.5$ Minuten.
+:::
